--- a/FlaskSurveyForm/templates/base.html
+++ b/FlaskSurveyForm/templates/base.html
@@ -65,7 +65,7 @@
     <footer class="container mt-4 py-3 border-top text-center text-muted">
         <div class="row">
             <div class="col">
-                <p class="mb-0">&copy; {{ now.year }} Stryker Corporation. All rights reserved.</p>
+                <p class="mb-0">&copy; {{ current_year }} Stryker Corporation. All rights reserved.</p>
             </div>
         </div>
     </footer>
