run the code formatter for readability and consistency

--- a/FlaskSurveyForm/templates/index.html
+++ b/FlaskSurveyForm/templates/index.html
@@ -157,7 +157,8 @@
                                     </div>
                                     <div class="col-md-12">
                                         {{ form.concur_claim.label(class="form-label") }}
-                                        {{ form.concur_claim(class="form-control", placeholder="Enter Concur claim number")
+                                        {{ form.concur_claim(class="form-control", placeholder="Enter Concur claim
+                                        number")
                                         }}
                                     </div>
                                 </div>
