--- a/FlaskSurveyForm/templates/index.html
+++ b/FlaskSurveyForm/templates/index.html
@@ -113,14 +113,24 @@
                             <div class="form-text">Required for offsite training</div>
                         </div>
 
-                        <!-- Trainer Days (only shown for Internal Training) -->
-                        <div id="trainer-days-container" class="col-md-6 mb-3 d-none">
-                            {{ form.trainer_days.label(class="form-label") }}
-                            {{ form.trainer_days(class="form-control", type="number", step="0.5", min="0") }}
-                            <div class="form-text">Enter the amount of time the trainer spent preparing and
-                                administering
-                                this training in days i.e. if you spent 4 hours preparing for the training and 8 hours
-                                delivering the training, enter 1.5</div>
+                        <div class="row">
+                            <!-- Trainer Days (only shown for Internal Training) -->
+                            <div id="trainer-days-container" class="col-md-6 mb-3 d-none">
+                                {{ form.trainer_days.label(class="form-label") }}
+                                {{ form.trainer_days(class="form-control", type="number", step="0.5", min="0") }}
+                                <div class="form-text">Enter the amount of time the trainer spent preparing and
+                                    administering
+                                    this training in days i.e. if you spent 4 hours preparing for the training and 8
+                                    hours
+                                    delivering the training, enter 1.5</div>
+                            </div>
+                            <!-- Trainee Days -->
+                            <div class="col-md-6 mb-3">
+                                {{ form.trainee_days.label(class="form-label") }}
+                                {{ form.trainee_days(class="form-control", type="number", step="0.5", min="0") }}
+                                <div class="form-text">How much time the trainees spent at the training, in working days
+                                </div>
+                            </div>
                         </div>
 
                         <!-- Training Dates -->
@@ -135,6 +145,8 @@
                                 {{ form.end_date(class="form-control date-picker") }}
                             </div>
                         </div>
+
+
                         <!-- Expenses Section -->
                         <div class="row mb-4">
                             <div class="col-md-12">
