fixed attachment bug, and merged functionality between adding trainees via search and via bulk add

--- a/FlaskSurveyForm/templates/index.html
+++ b/FlaskSurveyForm/templates/index.html
@@ -271,7 +271,7 @@
                             <div id="trainees-list" class="trainees-list"></div>
                         </div>
                         <!-- Updated the trainees section -->
-                        <h3 class="fs-5 border-bottom pb-2 mb-3">Attendees</h3>
+                        <h3 class="fs-5 border-bottom pb-2 mb-3">Trainees</h3>
                         <div class="mb-3">
                             {{ form.attendee_emails.label(class="form-label") }}
                             {{ form.attendee_emails(class="form-control",
