--- a/FlaskSurveyForm/templates/list.html
+++ b/FlaskSurveyForm/templates/list.html
@@ -209,9 +209,9 @@
 {% if total_pages > 1 %}
 <nav aria-label="Page navigation">
     <ul class="pagination">
-        {% if page > 1 %}
+        {% if current_page > 1 %}
         <li class="page-item">
-            <a class="page-link" href="{{ url_for('list_forms', page=page-1, **params|remove_param('page')) }}">Previous</a>
+            <a class="page-link" href="{{ url_for('list_forms', page=current_page-1, **params|remove_param('page')) }}">Previous</a>
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -220,14 +220,14 @@
         {% endif %}
         
         {% for p in range(1, total_pages + 1) %}
-        <li class="page-item {% if p == page %}active{% endif %}">
+        <li class="page-item {% if p == current_page %}active{% endif %}">
             <a class="page-link" href="{{ url_for('list_forms', page=p, **params|remove_param('page')) }}">{{ p }}</a>
         </li>
         {% endfor %}
         
-        {% if page < total_pages %}
+        {% if current_page < total_pages %}
         <li class="page-item">
-            <a class="page-link" href="{{ url_for('list_forms', page=page+1, **params|remove_param('page')) }}">Next</a>
+            <a class="page-link" href="{{ url_for('list_forms', page=current_page+1, **params|remove_param('page')) }}">Next</a>
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -242,7 +242,7 @@
 <div class="text-center text-muted mb-4">
     Showing {{ forms|length }} of {{ total_forms }} total entries
     {% if total_pages > 1 %}
-    (Page {{ page }} of {{ total_pages }})
+    (Page {{ current_page }} of {{ total_pages }})
     {% endif %}
 </div>
 
